--- a/confs/wmask_open.conf
+++ b/confs/wmask_open.conf
@@ -7,7 +7,7 @@ general {
 }
 
 dataset {
-    data_dir = ./public_data/CASE_NAME/
+    data_dir = ./public_data/deepfashion_blender/re_rendered_data/CASE_NAME/
     render_cameras_name = cameras_sphere.npz
     object_cameras_name = cameras_sphere.npz
 }
