--- a/confs/wmask_dtu.conf
+++ b/confs/wmask_dtu.conf
@@ -1,5 +1,5 @@
 general {
-    base_exp_dir = ./exp/CASE_NAME/wmask_diffuse_open
+    base_exp_dir = ./exp/CASE_NAME/wmask_dtu
     recording = [
         ./,
         ./models
@@ -8,8 +8,8 @@ general {
 
 dataset {
     # data_dir = ./public_data/deepfashion_blender/re_rendered_data_test/CASE_NAME/
-    data_dir = ./public_data/deepfashion_diffuse_only/CASE_NAME/
-    render_cameras_name = cameras_sphere.npz
+    data_dir = ./public_data/dtu/CASE_NAME/
+    render_cameras_name = cameras_large.npz
     object_cameras_name = cameras_sphere.npz
 }
 
