--- a/confs/wmask_open.conf
+++ b/confs/wmask_open.conf
@@ -1,5 +1,6 @@
 general {
-    base_exp_dir = ./exp/CASE_NAME/wmask_diffuse_open
+    # base_exp_dir = ./exp/CASE_NAME/wmask_specular_open
+    base_exp_dir = ./exp/CASE_NAME/wmask_open
     recording = [
         ./,
         ./models
@@ -7,8 +8,10 @@ general {
 }
 
 dataset {
-    # data_dir = ./public_data/deepfashion_blender/re_rendered_data_test/CASE_NAME/
-    data_dir = ./public_data/deepfashion_diffuse_only/CASE_NAME/
+    # data_dir = ./public_data/deepfashion_blender/re_rendered_data_specular_test/CASE_NAME/
+    data_dir = ./public_data/deepfashion_blender/re_rendered_data_test/CASE_NAME/
+    # data_dir = ./public_data/deepfashion_blender/re_rendered_data/CASE_NAME/
+    # data_dir = ./public_data/deepfashion_diffuse_only/CASE_NAME/
     render_cameras_name = cameras_sphere.npz
     object_cameras_name = cameras_sphere.npz
 }
@@ -16,7 +19,7 @@ dataset {
 train {
     learning_rate = 2e-4
     learning_rate_alpha = 0.05
-    end_iter = 400000
+    end_iter = 5000
 
     batch_size = 512
     validate_resolution_level = 4
@@ -26,7 +29,7 @@ train {
 
     save_freq = 10000
     val_freq = 2500
-    val_mesh_freq = 5000
+    val_mesh_freq = 2500
     report_freq = 100
 
     mask_weight = 0.1
